# c8r

./: .gitignore  CMakeLists.txt  README.md  c8bool.c  c8bool.h  c8cond.c  c8cond.h  c8ctx.h  c8debug.h  c8decl.c  c8decl.h  c8error.c  c8error.h  c8eval.c  c8eval.h  c8expr.c  c8expr.h  c8flow.c  c8func.c  c8func.h  c8group.c  c8group.h  c8list.c  c8list.h  c8loop.c  c8loop.h  c8map.c  c8map.h  c8mpfr.c  c8mpfr.h  c8mpz.c  c8obj.c  c8obj.h  c8objimp.h  c8ops.c  c8r.h  c8script.c  c8script.h  c8stmt.c  c8stmt.h  (+9 more)
calcul8/: c8bool.c  c8buf.c  c8buf.h  c8cond.c  c8ctx.c  c8debug.c  c8decl.c  c8error.c  c8error.h  c8eval.c  c8eval.h  c8expr.h  c8flow.c  c8flow.h  c8func.c  c8func.h  c8list.c  c8loop.c  c8loop.h  c8map.c  c8map.h  c8mpc.c  c8mpc.h  c8mpfr.c  c8mpfr.h  c8mpz.c  c8mpz.h  c8num.c  c8num.h  c8numimp.h  c8obj.c  c8ops.c  c8ops.h  c8script.h  c8stmt.c  c8stmt.h  c8string.c  c8string.h  c8vec.c  c8vec.h  (+1 more)
test/scripts/: for_simple.c8  if_simple.c8  names.c8  short_circuit.c8  sub_recursive.c8  sub_simple.c8  var_bool.c8  var_conv.c8  var_simple.c8
